@@ -1,7 +1,13 @@
 # AP2020 - Sharif university of technology - Team 1
 
 ## Table of contents
+* [Environment setup](#Environment-setup)
 * [Credits](#Credits)
+
+## Environment setup
+- Add `PATH_TO_JAVAFX_ON_YOUR_SYSTEM/lib` folder to Libraries in Intellij project structure
+- Add VM options bellow to Intellij run configuration
+    - `module-path PATH_TO_JAVAFX_ON_YOUR_SYSTEM/lib --add-modules=javafx.controls,javafx.fxml`
 
 ## Credits
 | Name | Student number | Email |
